--- a/team.html
+++ b/team.html
@@ -159,14 +159,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/katy2.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Katy Foss's Photo">
+                                    <img src="assets/img/team/anton.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Katy Foss</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Tecumseh, MI</div>
+                                        <h3 class="text-primary">Anton Samanic</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Mokena, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Environmental Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -178,14 +178,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/anton.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
+                                    <img src="assets/img/team/caley.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Anton Samanic</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Mokena, IL</div>
+                                        <h3 class="text-primary">Caley Burnock</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Wixom, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -199,12 +199,12 @@
                                 <div class="card-body">
                                     <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Tommy Erickson</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Grosse Ile, MI</div>
+                                        <h3 class="text-primary">Suhas Rao Cheeti</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/them/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Commerce, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2023</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2025</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -223,7 +223,7 @@
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Pinckney, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2024</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -237,12 +237,12 @@
                                 <div class="card-body">
                                     <img src="assets/img/team/ethan.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ethan Rylko's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Ethan Rylko</h3>
+                                        <h3 class="text-primary">Liam McNulty</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Rochester Hills, MI</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Chicago, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science and Applied Engineering Sciences</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computational Data Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -256,11 +256,11 @@
                                 <div class="card-body">
                                     <img src="assets/img/team/caley.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Caley Burnock</h3>
+                                        <h3 class="text-primary">Anna Norfleet</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Wixom, MI</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Bay City, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Media Chair</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Computer Science</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Chemical Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
 
@@ -275,12 +275,12 @@
                                 <div class="card-body">
                                     <img src="assets/img/team/jack.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Jack Sleeman</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Pinckney, MI</div>
+                                        <h3 class="text-primary">Emma Powell</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Midland, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
                                     
                                     <!-- <div class="border-top">
@@ -298,7 +298,7 @@
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>South Lyon, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Co-Caterer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Biosystems Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Biosystems Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
                                     </div>
                                     
@@ -317,7 +317,7 @@
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Washington TWP, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Co-Caterer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Civil Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Civil Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
                                     </div>
                                 </div>
