Changed team images
Added and changed the images of some people

--- a/team.html
+++ b/team.html
@@ -197,7 +197,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
+                                    <img src="assets/img/team/suhas.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Suhas Rao Cheeti</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/them/his</div>
@@ -254,7 +254,7 @@
 			            <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/caley.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
+                                    <img src="assets/img/team/anna-norfleet.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Anna Norfleet</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
@@ -273,7 +273,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/jack.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
+                                    <img src="assets/img/team/emma-powell.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Emma Powell</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
