--- a/team.html
+++ b/team.html
@@ -216,7 +216,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/joshv.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joshua VanBynen's Photo">
+                                    <img src="assets/img/team/joshvan.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joshua VanBynen's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Joshua VanBynen</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
@@ -311,7 +311,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/garrett.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Garrett Gambaro's Photo">
+                                    <img src="assets/img/team/garrettgam.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Garrett Gambaro's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Garrett Gambaro</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
