--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                                     <p>Applications are due by <b>Friday, July 14th, 2023 at 11:59 pm EST</b>. However, the earlier your application is submitted, the earlier you will be considered for the program! 
                                                     All participants choosing to take part will be charged a program fee of around $200. <!--This is subject to change, and will be refunded 
                                                     if the program is unable to occur due to future COVID-19 restrictions/guidelines.--> All accepted participants will be contacted via email by <b>July 16th</b>. There will be an acceptance form that must be completed by <b>July 18th</b> to secure early move-in.
-                                                    If accepted, early move-in for participants will be <b>August 20th</b> with the program running to the <b>23rd</b>. More information about time/location will be provided on acceptance to the program. 
+                                                    If accepted, early move-in for participants will be <b>August 19th</b> with the program running to the <b>22nd</b>. More information about time/location will be provided on acceptance to the program. 
                                                     If you are interested in attending, please fill out the Google Form by clicking on the button below.</p>
                                                     <p>If you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
                                                     <p>We hope to see you soon!</p>
@@ -171,7 +171,7 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
-                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/1xLuBSU91AdSTy4Q7" target="_blank">Sign Up Here</a>
+                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/skrHfvPhCW94a6tZA" target="_blank">Sign Up Here</a>
                                                 </div>
                                             </div>
                                         </div>
