--- a/about.html
+++ b/about.html
@@ -72,6 +72,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a href="schedule.html" class="nav-link">
+                                <i class="fa fa-info-circle d-lg-none"></i>
+                                <span class="nav-link-inner--text">Schedule</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="https://www.instagram.com/leadershipadvantagemsu/" target="_blank" class="nav-link">
                                 <i class="fa fa-instagram fa-lg d-lg mr-0"></i>
                                 <span class="nav-link-inner--text">Instagram</span>
@@ -119,7 +125,7 @@
                                 <h1 class="display-3  text-white">About the Program
                                 </h1>
                                 <!--
-                                <p class="lead text-white">Applications for the 2023 program are not yet open.</p>
+                                <p class="lead text-white">Applications for the 2024 program are not yet open.</p>
                                 <p class="lead text-white">The applications will open in the Spring.</p>
                                 -->
                                 <p class="lead text-white">Applications for the 2024 program are now open.</p>
