--- a/team.html
+++ b/team.html
@@ -72,6 +72,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a href="schedule.html" class="nav-link">
+                                <i class="fa fa-info-circle d-lg-none"></i>
+                                <span class="nav-link-inner--text">Schedule</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="https://www.instagram.com/leadershipadvantagemsu/" target="_blank" class="nav-link">
                                 <i class="fa fa-instagram fa-lg d-lg mr-0"></i>
                                 <span class="nav-link-inner--text">Instagram</span>
