--- a/schedule.html
+++ b/schedule.html
@@ -186,7 +186,7 @@
                             <h1 id="map-title" style="margin-top: 40px;">Check-In Location</h1>
                             <!-- Google Maps API integration -->
                             <div id="map"></div>
-                            <a href="https://www.google.com/maps/dir/?api=1&destination=42.72439193725586,-84.49002838134766" target="_blank" class="btn btn-primary btn-get-directions">
+                            <a href="https://www.google.com/maps/dir/?api=1&destination=42.722510509024, -84.48984909338013" target="_blank" class="btn btn-primary btn-get-directions">
                                 Get Directions
                             </a>
                         </div>
@@ -237,9 +237,9 @@
         var map, directionsService, directionsRenderer;
 
         function initMap() {
-            var wondersHall = { lat: 42.72439193725586, lng: -84.49002838134766 }; // Wonders Hall coordinates
+            var westWilsonHall = { lat: 42.72252925548921, lng: -84.48986823159166 }; // West Wilson Hall coordinates
             map = new google.maps.Map(document.getElementById('map'), {
-                center: wondersHall,
+                center: westWilsonHall,
                 zoom: 14
             });
 
@@ -248,11 +248,11 @@
 
             directionsRenderer.setMap(map);
 
-            // Marker at Wonders Hall
+            // Marker at West Wilson Hall
             var marker = new google.maps.Marker({
-                position: wondersHall,
+                position: westWilsonHall,
                 map: map,
-                title: 'Wonders Hall'
+                title: 'West Wilson Hall'
             });
 
             // Ask for the user's location
@@ -260,7 +260,7 @@
                 navigator.geolocation.getCurrentPosition(showPosition, showError);
             } else {
                 alert("Geolocation is not supported by this browser.");
-                map.setCenter(wondersHall); // Show only Wonders Hall
+                map.setCenter(westWilsonHall); // Show only West Wilson Hall
             }
         }
 
@@ -269,7 +269,7 @@
                 lat: position.coords.latitude,
                 lng: position.coords.longitude
             };
-            var end = { lat: 42.72439193725586, lng: -84.49002838134766 }; // Wonders Hall
+            var end = { lat: 42.72252925548921, lng: -84.48986823159166 }; // West Wilson Hall
 
             directionsService.route(
                 {
@@ -288,7 +288,7 @@
         }
 
         function showError(error) {
-            var wondersHall = { lat: 42.72439193725586, lng: -84.49002838134766 }; // Wonders Hall
+            var westWilsonHall = { lat: 42.72252925548921, lng: -84.48986823159166 }; // West Wilson Hall
             switch (error.code) {
                 case error.PERMISSION_DENIED:
                     alert("User denied the request for Geolocation.");
@@ -303,13 +303,13 @@
                     alert("An unknown error occurred.");
                     break;
             }
-            map.setCenter(wondersHall); // Center the map on Wonders Hall if there's an error
+            map.setCenter(westWilsonHall); // Center the map on West Wilson Hall if there's an error
 
-            // Add a marker at Wonders Hall
+            // Add a marker at West Wilson Hall
             new google.maps.Marker({
-                position: wondersHall,
+                position: westWilsonHall,
                 map: map,
-                title: 'Wonders Hall'
+                title: 'West Wilson Hall'
             });
         }
 
