Added Schedule Page
Added navigation to schedule and way to check check-in location.

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                                 <span class="nav-link-inner--text">The Team</span>
                             </a>
                         </li>
-                        <!--<li class="nav-item">
+                        <li class="nav-item">
                             <a href="schedule.html" class="nav-link">
                                 <i class="fa fa-info-circle d-lg-none"></i>
                                 <span class="nav-link-inner--text">Schedule</span>
                             </a>
-                        </li>-->
+                        </li>
                         <li class="nav-item">
                             <a href="https://www.instagram.com/leadershipadvantagemsu/" target="_blank" class="nav-link">
                                 <i class="fa fa-instagram fa-lg d-lg mr-0"></i>
