--- a/team.html
+++ b/team.html
@@ -189,7 +189,7 @@
                                         <h3 class="text-primary">Caley Burnock</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Wixom, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i> Internal President</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
@@ -203,14 +203,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/suhas.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
+                                    <img src="assets/img/team/Joey.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Suhas Rao Cheeti</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/them/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Commerce, MI</div>
+                                        <h3 class="text-primary">Joseph Brueggmann</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>New Lenox, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2025</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Chemical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2028</div>
                                     </div>
 
                                     <!-- <div class="border-top">
