--- a/team.html
+++ b/team.html
@@ -165,14 +165,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/anton.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
+                                    <img src="assets/img/team/caley.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Anton Samanic</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Mokena, IL</div>
+                                        <h3 class="text-primary">Caley Burnock</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Wixom, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Applied Engineering Sciences</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -184,14 +184,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/caley.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
+                                    <img src="assets/img/team/anton.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Caley Burnock</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Wixom, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i> Internal President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
+                                        <h3 class="text-primary">Anton Samanic</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Mokena, IL</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i> External President</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering </div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
                                     </div>
 
                                     <!-- <div class="border-top">
