--- a/team.html
+++ b/team.html
@@ -266,7 +266,7 @@
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Bay City, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Media Chair</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Chemical Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Chemical Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
 
@@ -285,7 +285,7 @@
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Midland, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
                                     
