information for ryan

--- a/team.html
+++ b/team.html
@@ -186,12 +186,12 @@
                                 <div class="card-body">
                                     <img src="assets/img/team/anton.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Anton Samanic</h3>
+                                        <h3 class="text-primary">Ryan Tanzer</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Mokena, IL</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Libertyville, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i> External President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering </div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Astrophysics </div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2027</div>
                                     </div>
 
                                     <!-- <div class="border-top">
