Pictures an Treasurer Info

--- a/team.html
+++ b/team.html
@@ -165,7 +165,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/caley.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
+                                    <img src="assets/img/team/Caley (1) - Caley Burnock.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Caley Burnock</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
@@ -222,14 +222,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/joshvan.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joshua VanBynen's Photo">
+                                    <img src="assets/img/team/DunnFamily2024-37 - Connor Dunn (1).jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joshua VanBynen's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Joshua VanBynen</h3>
+                                        <h3 class="text-primary">Connor Dunn</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Pinckney, MI</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Canton, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2024</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Biomedical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
 
                                     <!-- <div class="border-top">
