--- a/team.html
+++ b/team.html
@@ -165,7 +165,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/Caley (1) - Caley Burnock.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
+                                    <img src="assets/img/team/CaleyB.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Caley Burnock</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
