--- a/team.html
+++ b/team.html
@@ -222,7 +222,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/DunnFamily2024-37 - Connor Dunn (1).jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joshua VanBynen's Photo">
+                                    <img src="assets/img/team/ConnorD.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joshua VanBynen's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Connor Dunn</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
