Capitilization of Pronouns

--- a/team.html
+++ b/team.html
@@ -168,7 +168,7 @@
                                     <img src="assets/img/team/CaleyB.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Caley Burnock</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>She/Her/Hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Wixom, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Applied Engineering Sciences</div>
@@ -187,7 +187,7 @@
                                     <img src="assets/img/team/anton.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Ryan Tanzer</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Libertyville, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i> External President</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Astrophysics </div>
@@ -206,7 +206,7 @@
                                     <img src="assets/img/team/Joey.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Joseph Brueggmann</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>New Lenox, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Chemical Engineering</div>
@@ -225,7 +225,7 @@
                                     <img src="assets/img/team/ConnorD.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joshua VanBynen's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Connor Dunn</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Canton, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Biomedical Engineering</div>
@@ -244,7 +244,7 @@
                                     <img src="assets/img/team/liam.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ethan Rylko's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Liam McNulty</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Chicago, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computational Data Science</div>
@@ -263,7 +263,7 @@
                                     <img src="assets/img/team/anna-norfleet.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Anna Norfleet</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>She/Her/Hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Bay City, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Media Chair</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Chemical Engineering</div>
@@ -282,7 +282,7 @@
                                     <img src="assets/img/team/emma-powell.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Emma Powell</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>She/Her/Hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Midland, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
@@ -301,7 +301,7 @@
                                     <img src="assets/img/team/jordan.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jordan Dashner's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Jordan Dashner</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>She/Her/Hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>South Lyon, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Co-Caterer</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Biosystems Engineering</div>
@@ -320,7 +320,7 @@
                                     <img src="assets/img/team/garrettgam.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Garrett Gambaro's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Garrett Gambaro</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Washington TWP, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Co-Caterer</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Civil Engineering</div>
