--- a/team.html
+++ b/team.html
@@ -228,7 +228,7 @@
                                         <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Canton, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Biomedical Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Biomedical Engineering and Kinesiology</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
 
