--- a/team.html
+++ b/team.html
@@ -184,7 +184,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/anton.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
+                                    <img src="assets/img/team/Ryan.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Ryan Tanzer</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
