--- a/team.html
+++ b/team.html
@@ -241,14 +241,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/liam.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ethan Rylko's Photo">
+                                    <img src="assets/img/team/EmilyJ.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ethan Rylko's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Liam McNulty</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Chicago, IL</div>
+                                        <h3 class="text-primary">Emily Jozwiak</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>She/Her/Hers</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Traverse City, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computational Data Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Chemical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2027</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -279,7 +279,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/emma-powell.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
+                                    <img src="assets/img/team/EmmaP.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Emma Powell</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>She/Her/Hers</div>
