--- a/team.html
+++ b/team.html
@@ -260,7 +260,7 @@
 			            <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/anna-norfleet.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
+                                    <img src="assets/img/team/AnnaN.png" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Anna Norfleet</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>She/Her/Hers</div>
